# sigstore-rs

./: .clippy.toml  .gitignore  .taplo.toml  ACTION_PLAN.md  CHANGELOG.md  CLEANUP-GUIDE.md  CMS_CRATE_COMPARISON.md  CODEOWNERS  CONFORMANCE_FIXES.md  CONTRIBUTORS.md  CRITICAL_BUG_FOUND.md  Cargo.toml  Dockerfile  FIXING-CRITICAL-ISSUES.md  IMPROVEMENT-OPPORTUNITIES.md  INVESTIGATION_COMPLETE.md  MERKLE-IMPLEMENTATION.md  MISSING_FEATURES_SUMMARY.md  Makefile  NONCE_GENERATION_TESTS.md  PATCH_ANALYSIS_REPORT.md  PATCH_CODE_REFERENCE.md  README.md  REKOR_V2_HANDOFF.md  REKOR_V2_IMPLEMENTATION_PLAN.md  REMAINING_WORK.md  RUSTCRYPTO_CMS_TEST_RESULTS.md  SIGSTORE_GO_REKOR_V2_ANALYSIS.md  START_HERE.md  TIMESTAMP_ANALYSIS.md  TIMESTAMP_FIX_SUMMARY.md  TODO-rekor-v2.md  TSA_BUG_REPORT.md  UPSTREAM_BUG_REPORT.md  UPSTREAM_ISSUE_AND_RFC.md  WEBPKI_QUICK_REFERENCE.md  WEBPKI_README.md  WEBPKI_SUMMARY.md  WEBPKI_TSA_ANALYSIS.md  capture_failing_bundle.py  (+19 more)
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: README-attest-blob.md  auto-publish-crates-upon-release.yml  cargo-vet.yml  conformance-tests.yml  conformance.yml  docs.yml  release-drafter.yml  security-audit-cron.yml  security-audit-reactive.yml  security-audit.yml  test-attest-blob.yml  tests.yml  zizmor.yml
examples/: README.md  README_FOR_EXPERT.md  README_WEBPKI_ISSUE.md  SOLUTION_TSA_VALIDATION.md  compare_with_sigstore_go.sh  openssl_tsa_concept.sh
examples/bundle/: README.md  main.rs
examples/conformance/: main.rs
examples/cosign/sign/: README.md  main.rs
examples/cosign/trustroot/: main.rs
examples/cosign/verify/: README.md  main.rs
examples/cosign/verify-blob/: .gitignore  README.md  main.rs
examples/cosign/verify-bundle/: .gitignore  README.md  main.rs  run.sh
examples/fulcio/cert/: main.rs
examples/get_log_entry_by_index/: main.rs
examples/get_log_entry_by_uuid/: main.rs
examples/get_log_info/: main.rs
examples/get_rekor_version/: main.rs
examples/key_interface/: README.md  main.rs
examples/key_interface/ecdsa_p256/: main.rs
examples/key_interface/key_pair_gen_and_export/: main.rs
examples/key_interface/key_pair_gen_sign_verify/: main.rs
examples/key_interface/key_pair_import/: ECDSA_P256_ASN1_ENCRYPTED_PRIVATE_PEM.key  ECDSA_P256_ASN1_PRIVATE_DER.key  ECDSA_P256_ASN1_PRIVATE_PEM.key  ECDSA_P256_ASN1_PUBLIC_DER.pub  ECDSA_P256_ASN1_PUBLIC_PEM.pub  main.rs
examples/openidconnect/: main.rs
examples/openidflow/: README.md  main.rs
examples/openidflow/openidconnect/: main.rs
examples/rekor/: README.md
examples/rekor/create_log_entry/: main.rs
examples/rekor/get_log_entry_by_index/: main.rs
examples/rekor/get_log_entry_by_uuid/: main.rs
examples/rekor/get_log_proof/: main.rs
examples/rekor/get_public_key/: main.rs
examples/rekor/merkle_proofs/: consistency.rs  inclusion.rs
examples/rekor/search_index/: main.rs
examples/rekor/search_log_query/: main.rs
examples/search_index/: main.rs
examples/search_log_query/: main.rs
examples/verify/: README.md  main.rs  openidflow.rs
examples_old/: debug_cert_extraction.rs  debug_rekor2_bundle.rs  isolate_cert_corruption.rs  rustcrypto_cms_certificate_preservation.rs  test_p384_verification.rs  webpki_issue_demo.rs  webpki_tsa_reproduce_exact.rs  webpki_tsa_simple.rs  webpki_tsa_validation.rs  webpki_upstream_test.rs
patches/: 285.patch.txt  315.patch.txt  354.patch.txt
src/: crypto.rs  distribution.rs  errors.rs  lib.rs  mock_client.rs  registry.rs  rekor.rs  sign.rs  simple_signing.rs
src/bundle/: dsse.rs  intoto.rs  mod.rs  models.rs  old_dsse.rs  sign.rs
src/bundle/verify/: mod.rs  models.rs  policy.rs  verifier.rs
src/cosign/: bundle.rs  bundle_content.rs  client.rs  client_builder.rs  constants.rs  intoto.rs  mod.rs  signature_layers.rs  verification_constraint.rs
src/cosign/constraint/: annotation.rs  mod.rs  signature.rs
src/cosign/payload/: mod.rs  simple_signing.rs
src/cosign/verification_constraint/: annotation_verifier.rs  attestation_verifier.rs  cert_subject_email_verifier.rs  cert_subject_url_verifier.rs  certificate_verifier.rs  mod.rs  public_key_verifier.rs
src/crypto/: certificate.rs  certificate_pool.rs  cms_minimal.rs  keyring.rs  merkle.rs  mod.rs  note.rs  timestamp.rs  transparency.rs  tsa.rs  verification.rs  verification_key.rs
src/crypto/merkle/: mod.rs  proof_verification.rs  rfc6962.rs  testdata_tests.rs
src/crypto/signing_key/: ecdsa.rs  ed25519.rs  kdf.rs  mod.rs  rsa.rs
src/fulcio/: mod.rs  models.rs  oauth.rs
src/oauth/: http_client.rs  mod.rs  openidflow.rs  token.rs
src/openidconnect/: mod.rs  openidconnect.rs
src/registry/: config.rs  mod.rs  oci_caching_client.rs  oci_client.rs  oci_reference.rs
src/rekor/: client.rs  client_v1.rs  client_v2.rs  lib.rs  mod.rs
src/rekor/apis/: configuration.rs  entries_api.rs  index_api.rs  mod.rs  pubkey_api.rs  server_api.rs  tlog_api.rs
src/rekor/models/: alpine.rs  alpine_all_of.rs  checkpoint.rs  consistency_proof.rs  dsse.rs  error.rs  hashedrekord.rs  hashedrekord_all_of.rs  helm.rs  helm_all_of.rs  inactive_shard_log_info.rs  inclusion_proof.rs  intoto.rs  intoto_all_of.rs  jar.rs  jar_all_of.rs  log_entry.rs  log_info.rs  mod.rs  proposed_entry.rs  rekor_version.rs  rekord.rs  rekord_all_of.rs  rfc3161.rs  rfc3161_all_of.rs  (+7 more)
src/repo/: mod.rs
src/repository/: mod.rs
src/sigstore/: constants.rs  mod.rs
src/trust/: mod.rs
src/tuf/: constants.rs  mod.rs  repository_helper.rs  trustroot.rs
src/verify/: mod.rs  models.rs  policy.rs  verifier.rs
supply-chain/: config.toml
tests/: ban-list.py  debug_rekor2_bundle.rs  debug_rekor2_dsse.rs  dsse_intoto_integration_tests.rs  dsse_validation.rs  merkle_testdata.rs  test_p384_verification.rs  timestamp_verification_test.rs
tests/conformance/: Cargo.toml  README.md  conformance.rs  test_parse.rs
tests/data/: a.txt  bundle_v03.json  bundle_v3_github.sigstore.json  dsse_v001_bundle.sigstore.json  out.sigstore.json  sigstore_timestamp.der  sigstore_tsa_cert.der
trust_root/prod/: signing_config.json
trust_root/staging/: signing_config.json
(+23 files in other folders)
