[package]
name = "sigstore"
description = "An experimental crate to interact with sigstore"
version = "0.10.0"
edition = "2021"
authors = ["sigstore-rs developers"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigstore/sigstore-rs"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["full-native-tls", "cached-client", "sigstore-trust-root", "bundle"]
wasm = ["getrandom/js", "ring/wasm32_unknown_unknown_js", "chrono/wasmbind"]

full-native-tls = [
  "fulcio-native-tls",
  "rekor-native-tls",
  "cosign-native-tls",
  "mock-client-native-tls",
  "sigstore-trust-root-native-tls",
]
full-rustls-tls = [
  "fulcio-rustls-tls",
  "rekor-rustls-tls",
  "cosign-rustls-tls",
  "mock-client-rustls-tls",
  "sigstore-trust-root-rustls-tls",
]

# This features is used by tests that use docker to create a registry
test-registry = []

oauth-native-tls = ["openidconnect/native-tls", "oauth"]
oauth-rustls-tls = ["openidconnect/rustls-tls", "oauth"]
oauth = ["openidconnect"]

fulcio-native-tls = ["oauth-native-tls", "reqwest/native-tls", "fulcio"]
fulcio-rustls-tls = ["oauth-rustls-tls", "reqwest/rustls-tls", "fulcio"]
fulcio = ["oauth", "serde_with"]

rekor-native-tls = ["reqwest/native-tls", "rekor"]
rekor-rustls-tls = ["reqwest/rustls-tls", "rekor"]
rekor = ["reqwest"]

sign = ["sigstore_protobuf_specs", "fulcio", "rekor", "cert"]
verify = ["sigstore_protobuf_specs", "fulcio", "rekor", "cert"]
bundle = ["sign", "verify"]

sigstore-trust-root = [
  "sigstore_protobuf_specs",
  "futures-util",
  "tough",
  "reqwest_0_11",
  "tokio/sync",
]
sigstore-trust-root-native-tls = [
  "reqwest_0_11/native-tls",
  "sigstore-trust-root",
]
sigstore-trust-root-rustls-tls = [
  "reqwest_0_11/rustls-tls",
  "sigstore-trust-root",
]

cosign-native-tls = [
  "oci-client/native-tls",
  "cert",
  "cosign",
  "registry-native-tls",
]
cosign-rustls-tls = [
  "oci-client/rustls-tls",
  "cert",
  "cosign",
  "registry-rustls-tls",
]
cosign = ["olpc-cjson", "regex"]
cert = []

registry-native-tls = ["oci-client/native-tls", "registry"]
registry-rustls-tls = ["oci-client/rustls-tls", "registry"]
registry = ["olpc-cjson"]

mock-client-native-tls = ["oci-client/native-tls", "mock-client"]
mock-client-rustls-tls = ["oci-client/rustls-tls", "mock-client"]
mock-client = []

cached-client = ["cached"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
cached = { version = "0.53", optional = true, features = ["async"] }
cfg-if = "1.0.0"
chrono = { version = "0.4", default-features = false, features = [
  "now",
  "serde",
] }
const-oid = { version = "0.9", features = ["db"] }
digest = { version = "0.10", default-features = false }
ecdsa = { version = "0.16", features = ["pkcs8", "digest", "der", "signing"] }
ed25519 = { version = "2.2", features = ["alloc"] }
ed25519-dalek = { version = "2.1", features = ["pkcs8", "rand_core"] }
elliptic-curve = { version = "0.13", features = ["arithmetic", "pem"] }
futures = "0.3"
futures-util = { version = "0.3", optional = true }
lazy_static = "1.5"
oci-client = { default-features = false, optional = true, version = "0.13" }
olpc-cjson = { version = "0.1", optional = true }
openidconnect = { version = "3.5", default-features = false, features = [
  "reqwest",
], optional = true }
p256 = "0.13"
p384 = "0.13"
webbrowser = "1.0"
pem = { version = "3.0", features = ["serde"] }
pkcs1 = { version = "0.7", features = ["std"] }
pkcs8 = { version = "0.10", features = ["pem", "alloc", "pkcs5", "encryption"] }
rand = { version = "0.8", features = ["getrandom", "std"] }
getrandom = "0.2"
regex = { version = "1.10", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "multipart",
], optional = true }
# We have to include this old version of reqwest because tough is currently using it.
# By including it, we can configure which TLS backend it's going to use, otherwise fetching the
# TUF sigstore repository will fail at runtime because the old version of reqwest
# will be compiled withtout TLS support.
reqwest_0_11 = { package = "reqwest", version = "0.11", default-features = false, optional = true }
rsa = "0.9"
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.9", features = ["base64", "json"], optional = true }
sha2 = { version = "0.10", features = ["oid"] }
signature = { version = "2.2" }
sigstore_protobuf_specs = { version = "0.3", optional = true }
thiserror = "1.0"
tokio = { version = "1", features = ["rt"] }
tokio-util = { version = "0.7", features = ["io-util"] }
tough = { version = "0.19", features = ["http"], optional = true }
tracing = "0.1"
url = "2.5"
x509-cert = { version = "0.2", features = ["builder", "pem", "std", "sct"] }
crypto_secretbox = "0.1"
zeroize = "1.8"
rustls-webpki = { version = "0.102", features = ["alloc"] }
serde_repr = "0.1"
hex = "0.4"
json-syntax = { version = "0.12", features = ["canonicalize", "serde"] }
tls_codec = { version = "0.4", features = ["derive"] }
ring = "0.17"

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
assert-json-diff = "2.0"
clap = { version = "4.5", features = ["derive"] }
docker_credential = "1.3"
openssl = "0.10"
rstest = "0.23"
serial_test = "3.1"
tempfile = "3.12"
testcontainers = "0.23"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# cosign example mappings

[[example]]
name = "verify"
path = "examples/cosign/verify/main.rs"

[[example]]
name = "verify-blob"
path = "examples/cosign/verify-blob/main.rs"

[[example]]
name = "verify-bundle"
path = "examples/cosign/verify-bundle/main.rs"

[[example]]
name = "sign"
path = "examples/cosign/sign/main.rs"

# openidconnect example mappings

[[example]]
name = "openidconnect"
path = "examples/openidflow/openidconnect/main.rs"

# key interface mappings

[[example]]
name = "key_pair_gen_sign_verify"
path = "examples/key_interface/key_pair_gen_sign_verify/main.rs"

[[example]]
name = "key_pair_gen_and_export"
path = "examples/key_interface/key_pair_gen_and_export/main.rs"

[[example]]
name = "key_pair_import"
path = "examples/key_interface/key_pair_import/main.rs"

# rekor example mappings

[[example]]
name = "create_log_entry"
path = "examples/rekor/create_log_entry/main.rs"

[[example]]
name = "get_log_entry_by_index"
path = "examples/rekor/get_log_entry_by_index/main.rs"

[[example]]
name = "get_log_entry_by_uuid"
path = "examples/rekor/get_log_entry_by_uuid/main.rs"

[[example]]
name = "get_log_info"
path = "examples/rekor/get_log_info/main.rs"

[[example]]
name = "get_log_proof"
path = "examples/rekor/get_log_proof/main.rs"

[[example]]
name = "get_public_key"
path = "examples/rekor/get_public_key/main.rs"

[[example]]
name = "search_index"
path = "examples/rekor/search_index/main.rs"

[[example]]
name = "search_log_query"
path = "examples/rekor/search_log_query/main.rs"

[[example]]
name = "fulcio_cert"
path = "examples/fulcio/cert/main.rs"
