[package]
name = "sigstore-conformance"
description = "sigstore conformance testing workflow"
version = "0.0.1"
edition = "2021"
authors = ["sigstore-rs developers"]
license = "Apache-2.0"

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
anyhow = "1.0.75"
serde_json = "1.0.107"
sigstore = { path = "../../", default-features = false, features = ["bundle", "sigstore-trust-root", "full-native-tls"] }
tracing-subscriber = "0.3"

[[bin]]
name = "sigstore"
path = "conformance.rs"
